--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker
-                .register('https://mustafaayaz.github.io/JS_School/sw.js')
+                .register('sw.js')
                 .then((reg) => { console.log('SW Registered', reg) })
                 .catch(console.log)
         }
