--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="theme-color" content="#457cdb">
     <meta name="Description" content="">
     <link rel="manifest" href="manifest.json">
-    <link rel="shortcut icon" href="img_JS.png">
-    <link rel="icon" sizes="192x192" href="img_JS.png">
+    <link rel="shortcut icon" href="img_M.png">
+    <link rel="icon" sizes="192x192" href="img_M.png">
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker
