--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="Description" content="">
     <link rel="manifest" href="manifest.json">
     <link rel="shortcut icon" href="img_M.png">
-    <link rel="icon" sizes="192x192" href="img_M.png">
+    <link rel="icon" href="img_M.png">
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker
