--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ pre {
 <body>
     <header>
         <div class="container">
-            <img src="img_JS.png" height="35"/>
+            <img src="img_M.png" height="35"/>
             <h3>Advanced Programming</h3>
         </div>
     </header>
