--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ pre {
                 <h3>Home Works</h3>
                 <li>HW1 - <a href="https://mustafaayaz.github.io/JS_School/PoissonTable.html">Poisson Table</a></li>
                 <li>HW2 - <a href="https://mustafaayaz.github.io/JS_School/HW2/HW2-StudentDatabase.html">Database and Timing</a></li>
+                <li>HW3 - <a href="https://mustafaayaz.github.io/JS_School/anim/Animation.html">GitHub and Animation</a></li>
             </ul>
 
         </div>
