--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@ pre {
                 <li>CW8 - <a href="https://mustafaayaz.github.io/JS_School/CW8/CW8.html">File operations</a></li>
                 <li>CW9 - <a href="https://mustafaayaz.github.io/JS_School/CW9_CountingJS.html">Page made by JS</a></li>
                 <li>CW10 - <a href="https://mustafaayaz.github.io/JS_School/CW10.html">ArrayBuffer and Crypto</a></li>
-                <li>CW11 - <a href="https://mustafaayaz.github.io/JS_School/CW11">Event listeners</a</li>
-                <li>CW11 - <a href="https://mustafaayaz.github.io/JS_School/CW12.html">GitHub user API</a</li>
-                <li>CW11 - <a href="https://mustafaayaz.github.io/JS_School/CW13">Weather API</a</li>
+                <li>CW11 - <a href="https://mustafaayaz.github.io/JS_School/CW11">Event listeners</a></li>
+                <li>CW11 - <a href="https://mustafaayaz.github.io/JS_School/CW12.html">GitHub user API</a></li>
+                <li>CW11 - <a href="https://mustafaayaz.github.io/JS_School/CW13">Weather API</a></li>
                 <hr>
                 <h3>Home Works</h3>
                 <li>HW1 - <a href="https://mustafaayaz.github.io/JS_School/PoissonTable.html">Poisson Table</a></li>
