--- a/index.html
+++ b/index.html
@@ -149,12 +149,13 @@ pre {
                 <li>CW11 - <a href="https://mustafaayaz.github.io/JS_School/CW11">Event listeners</a></li>
                 <li>CW12 - <a href="https://mustafaayaz.github.io/JS_School/CW12.html">GitHub user API</a></li>
                 <li>CW13 - <a href="https://mustafaayaz.github.io/JS_School/CW13">Weather API</a></li>
-                <li>CW14 - <a href="">OpenStreetMap</a></li>
+                <li>CW14 - <a href="https://mustafaayaz.github.io/JS_School/CW14">OpenStreetMap</a></li>
                 <hr>
                 <h3>Home Works</h3>
                 <li>HW1 - <a href="https://mustafaayaz.github.io/JS_School/PoissonTable.html">Poisson Table</a></li>
                 <li>HW2 - <a href="https://mustafaayaz.github.io/JS_School/HW2/HW2-StudentDatabase.html">Database and Timing</a></li>
                 <li>HW3 - <a href="https://mustafaayaz.github.io/305/anim/Animation.html">GitHub and Animation</a></li>
+                <hr>
                 <h3>Project</h3>
                 <li>Project - <a href="">Quiz</a></li>
             </ul>
