--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ pre {
                 <li>HW3 - <a href="https://mustafaayaz.github.io/305/anim/Animation.html">GitHub and Animation</a></li>
                 <hr>
                 <h3>Project</h3>
-                <li>Project - <a href="">Quiz</a></li>
+                <li>Project - <a href="https://mustafaayaz.github.io/JS_School/Project/quiz.html">Quiz</a></li>
             </ul>
 
         </div>
