--- a/Project/quiz.html
+++ b/Project/quiz.html
@@ -60,7 +60,7 @@ div#test{
 "use strict";
 var currentQuestion, chA, chB, chC, chD, trueAnswer;
 var questions = [];
-const url = "https://mustafaayaz.github.io/JS_School/sorular.txt";
+const url = "https://mustafaayaz.github.io/JS_School/Project/sorular.txt";
 function readData(){
     fetch(url)
         .then(txt=>txt.text())
