--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@ pre {
                 <li>CW12 - <a href="https://mustafaayaz.github.io/JS_School/CW12.html">GitHub user API</a></li>
                 <li>CW13 - <a href="https://mustafaayaz.github.io/JS_School/CW13">Weather API</a></li>
                 <li>CW14 - <a href="https://mustafaayaz.github.io/JS_School/CW14">OpenStreetMap</a></li>
+                <li>CW15 - <a href="https://mustafaayaz.github.io/JS_School/CW15">Write to the cloud</a></li>
                 <hr>
                 <h3>Home Works</h3>
                 <li>HW1 - <a href="https://mustafaayaz.github.io/JS_School/PoissonTable.html">Poisson Table</a></li>
