--- a/Project/quiz.html
+++ b/Project/quiz.html
@@ -25,7 +25,19 @@ div#test{
 	font-size: 36px;
 	color: red;
 }
-
+.title2{
+	padding: 80px 0 5px 10px;
+	text-align: center;
+	font-size: 36px;
+	color: red;
+}
+.indicator{
+	font-weight: bold;
+	margin-left: 15px;
+	margin-top: 30px;
+	padding: 10px 0 0 10px;
+	float: left;
+}
 .start{
 
 	font-size: 20px;
@@ -36,9 +48,33 @@ div#test{
 	padding: 15px 0 0px 10px;
 	vertical-align: middle;
 	margin: 5px 0 10px 25px;
-	border-radius: 20px;
 }
+.question{
 
+	padding: 20px;
+	font-size: 19px;
+	background:darkblue;
+	border-radius: 50px;
+	margin: 10px 0 15px 0;
+	color: #f6f6f6;
+}
+.option{
+	font-size: 18px;
+	width: 350px;
+	display: inline-block;
+	padding: 10px 0 15px 10px;
+	vertical-align: middle;
+	background: rgba(255, 230, 230);
+	margin: 10px 0 10px 10px;
+	color: #000000;
+	border-radius: 50px;
+}
+.option:hover{
+	background: slateblue;
+	color:white;
+	cursor: pointer;
+
+}
 .next-btn{
 	border: none;
 	background: black;
@@ -50,44 +86,182 @@ div#test{
 	float: right;
 	margin: 10px 18px 5px 10px;
 }
+.score{
+	margin-top: 30px;
+	margin-right: 15px;
+	padding: 10px 0 0 10px;
+	border: none;
+	width: 90px;
+	height: 30px;
+	float: right;
+	font-weight: bold;
+}
 
 
-
-
+.cr{
+    font-size: 16px;
+	font-weight: bold;
+    padding-top: 50px;
+	text-align: center;
+	width: 333px;
+	display: inline-block;
+	padding: 10px 10px 10px 10px;
+	vertical-align: middle;
+	background:wheat;
+	margin: 10px 0 10px 30px;
+	color: #000000;
+	border-radius: 20px;
+}
 </style>
 
 <script>
 "use strict";
-var currentQuestion, chA, chB, chC, chD, trueAnswer;
-var questions = [];
+
+var whichQ = 0, correct=0, score = 0, question, choices, A, B, C, D, trueAnswer
+var questions = []
+var test	
 const url = "https://mustafaayaz.github.io/JS_School/Project/sorular.txt";
-function readData(){
+function readData(){	
     fetch(url)
         .then(txt=>txt.text())
         .then(txt =>{
-    let a = txt.split("\n");
+    let a = txt.split("\n") // satırların soru olması
 	for(let i=0;i<a.length-1;i++){
-    	let b = a[i].split("\t"); // tablara göre böler.
-    	currentQuestion = b[0], chA = b[1], chB = b[2], chC=b[3], chD=b[4], trueAnswer=b[5];
-    	questions.push([currentQuestion, chA, chB, chC, chD, trueAnswer]);
+    	let b = a[i].split("\t") // tablara göre soruları böler
+    	question = b[0], A = b[1], B = b[2], C=b[3], D=b[4], trueAnswer=b[5]
+		questions.push([question, A, B, C, D, trueAnswer])
+		console.log(b[0])
+		console.log(b[1])
+		console.log(b[2])
+		console.log(b[3])
+		console.log(b[4])
+		console.log(b[5])
 	}
-	startPage();
-});
+	startPage()
+})
 }
 
+var array=[]
+var r
+var sonuc
+function random() {	// soru sayısına kadar random sayı üretir, dinamik degil, sonradan duzeltilecek
+		r=Math.floor(Math.random() * 10)
+		if (!array.includes(r)){
+			array.push(r)
+			sonuc=r
+		}else { random() }
+		return sonuc
+}
 
-function startPage(){//başlangıç sayfası
-let test = document.getElementById("test");
-	     test.innerHTML ="<div class='title'>"+"QUIZ"+"</div><br><br>";
+function startPage(){	// başlangıç sayfası
+test = document.getElementById("test")
+array=[]
+test.innerHTML ="<div class='title'>"+"QUIZ"+"</div><br><br>"
 		 test.innerHTML +="<div class='start'><u1><li>Her doğru soru +10 puan </li><br></div>"
 		 test.innerHTML +="<div class='start'><li>Her yanlış soru -5 puan </li><br></div>"
 		 test.innerHTML +="<div class='start'><li>Bakalım kaç puan toplayacaksın? </li></ul><br></div>"
-		 test.innerHTML += "<button id='nextButton' class='next-btn' onclick='' >Başla</button>";
+		 test.innerHTML += "<button id='nextButton' class='next-btn' onclick='soruSor()' >Basla</button>"
 }
 
+function sorular(){	// soru ekrani
+	r=random();
+	test.innerHTML = "<div class='indicator'>Soru " +(whichQ+1)+" / "+questions.length+"</div>"
+	test.innerHTML += "<div class='score'> Skor =  " + score +"</div>"
+	question = questions[r][0]  //random seçilen soru ve cevapları
+	A = questions[r][1]
+	B = questions[r][2]
+	C = questions[r][3]
+	D = questions[r][4]
+	console.log("----")
+	console.log(A)
+	console.log(B)
+	console.log(C)
+	console.log(D)
+	test.innerHTML +="<div id='quizContainer' class='container'>"
+	test.innerHTML +="<div class='title2'>"+"Quiz"+"</div>"
+	test.innerHTML += "<div id='question' class='question'>"+ (whichQ + 1) +") " + question +"</div>"
+	test.innerHTML += "<label id='A' class='option' ><input type='radio' name='choices' onchange='cevapKontrol()' value='A'/> " + A + "</label><br>"
+	test.innerHTML += "<label id='B' class='option' ><input type='radio' name='choices' onchange='cevapKontrol()' value='B'/> " + B + "</label><br>"
+	test.innerHTML += "<label id='C' class='option' ><input type='radio' name='choices' onchange='cevapKontrol()' value='C'/> " + C + "</label><br>"
+	test.innerHTML += "<label id='D' class='option' ><input type='radio' name='choices' onchange='cevapKontrol()' value='D'/> " + D + "</label><br>"
+	test.innerHTML += "<button id='nextButton' class='next-btn' onclick='checkAnswer()'>Ileri</button></div>"
+}
+function checkAnswer(){
+	let choice
+	choices = document.getElementsByName("choices")
+	for(var i=0; i<choices.length; i++){
+		if(choices[i].checked){  
+			choice = choices[i].value
+			if(choice.includes(questions[r][5])){  
+				correct++
+				score+=10
+			} else {
+				if(score==0){
+					continue
+				}else{
+				score-=5
+				}
+			}
+		}
+	}
+	whichQ++
+    soruSor()
+}
 
+function cevapKontrol(){ 
+	let attempts, temp, choice
+	choices = document.getElementsByName("choices")
+	for(var i = 0; i < choices.length; i++){
+		choice = choices[i].value
+		if(choice.includes(questions[r][5]))
+			temp=choice
+	}
+	if( attempts != 1){
+		for(var i=0; i<choices.length; i++){
+			choice = choices[i].value
+			if(choices[i].checked){
+				if(choice.includes(questions[r][5])){
+				document.getElementById(choice).style.background='#00fa00'	// yesil
+				attempts = 1
+				}
+				else if (!choice.includes(questions[r][5])){
+				document.getElementById(choice).style.background='#fa0000'	// kirmizi
+				document.getElementById(temp).style.background='#00fa00' // yesil
+				attempts  = 1
+				}
+			}
+		}
+	}
+}
 
-readData();
+function soruSor(){   // sonuc
+	test = document.getElementById("test")
+	if(whichQ >= questions.length){
+        test.innerHTML = "<div class='title'>"+"Testi tamamladın"+"</div><br>"
+		test.innerHTML += "<div class='cr'><h2>"+ questions.length + " soru içerisinden " + correct +" soruyu doğru bildin "+"</h2></div>"
+		test.innerHTML += "<div class='cr'><h2>"+"Skorun : "+score+"</h2></div>"
+	    if(score<=25){
+			test.innerHTML += "<div class='cr'><h2>"+"Kendini geliştirmen lazım"+"</h2></div>"
+		}
+		if(score < 50 && score > 25){
+			test.innerHTML += "<div class='cr'><h2>"+"Daha iyisini yapabilirsin"+"</h2></div>"
+		}
+		if(score >= 50 && score < 75){
+			test.innerHTML += "<div class='cr'><h2>"+"İyi olmaya çok yakınsın"+"</h2></div>"
+		}
+		if(score >= 75){
+			test.innerHTML += "<div class='cr'><h2>"+"Çok iyisin!"+"</h2></div>"
+		}
+		whichQ = 0
+		correct = 0
+		score=0
+		test.innerHTML += "<button id='nextButton' class='next-btn' onclick='startPage()'>Tekrar</button>"
+		return
+	}
+	sorular()
+}
+
+readData()
 </script>
 
 <body>
