--- a/Project/quiz.html
+++ b/Project/quiz.html
@@ -165,6 +165,7 @@ function startPage(){	// başlangıç sayfası
 		array=[]
 		test.innerHTML ="<div class='title'>"+"QUIZ"+"</div><br><br>"
 		test.innerHTML +="<div class='start'><li>Toplamda 10 soru sorulacak</li></ul><br></div>"
+		test.innerHTML +="<div class='start'><li>Her soru için 10 saniyen var</li></ul><br></div>"
 		test.innerHTML +="<div class='start'><u1><li>Her doğru soru +10 puan </li><br></div>"
 		test.innerHTML +="<div class='start'><li>Her yanlış soru -5 puan </li><br></div>"
 		test.innerHTML +="<div class='start'><li>Bakalım kaç puan toplayacaksın? </li></ul><br></div>"
@@ -172,7 +173,7 @@ function startPage(){	// başlangıç sayfası
 		test.innerHTML +="<div id='isim' >© Mustafa Ayaz </div>"
 
 }
-
+	
 function sorular(){	// soru ekrani
 	r=random();
 	let temp 
