--- a/Project/quiz.html
+++ b/Project/quiz.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="application-name" content="Quiz" />
 <meta name="viewport" content="width=device-width">
+<link rel="shortcut icon" href="img_M.png">
 </head>	
 <style>	
 body{
