--- a/Project/quiz.html
+++ b/Project/quiz.html
@@ -5,6 +5,7 @@
 <meta name="application-name" content="Quiz" />
 <meta name="viewport" content="width=device-width">
 <link rel="shortcut icon" href="img_M.png">
+<link rel="icon" href="img_M.png">
 </head>	
 <style>	
 body{
