--- a/Project/quiz.html
+++ b/Project/quiz.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="application-name" content="Quiz" />
 <meta name="viewport" content="width=device-width">
-<link rel="shortcut icon" href="img_M.png">
-<link rel="icon" href="img_M.png">
+<link rel="shortcut icon" href="https://user-images.githubusercontent.com/38441329/103385237-9c5c8f80-4b0a-11eb-85fc-a4d953400807.png">
+<link rel="icon" href="https://user-images.githubusercontent.com/38441329/103385237-9c5c8f80-4b0a-11eb-85fc-a4d953400807.png">
 </head>	
 <style>	
 body{
